# Spotify-MCP-Server-Unofficial

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: mcp_server.py
app/common/: responses.py
app/spotify/: auth.py
src/: main.py  mcp_server.py  run.py
src/common/: exceptions.py  security.py  token.py
src/core/: config.py  db.py
src/models/dto/: auth_models.py
src/models/persistance/: auth.py
src/repositories/: auth_repo.py
src/routes/auth/: auth_routes.py
src/services/auth/: auth_services.py
src/spotify/: services.py
src/spotify_mcp/: server.py
src/spotify_mcp/services/: spotify_services.py
src/spotify_mcp/tools/: spotify_tools.py
src/spotify_mcp/utils/: decorators.py  token_verifier.py
